<resources>
    <string name="app_name">Xiomi Calculator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_widget">go to widget</string>
    <string name="age">Возраст</string>
    <string name="bmi">ИМТ</string>
    <string name="square">Площадь</string>
    <string name="data">Данные</string>
    <string name="discount">Скидка</string>
    <string name="Date">Дата</string>
    <string name="length">Длина</string>
    <string name="weight">Масса</string>
    <string name="numeral_system">Система \n исчисление</string>
    <string name="speed">Скорость</string>
    <string name="temperature">Температура</string>
    <string name="time">Время</string>
    <string name="volume">Объем</string>
    <string name="currency">Валюта</string>
    <string name="investment">Инвестиции</string>
    <string name="loan">Кредит</string>
    <string name="todo">TODO</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="history">История</string>
    <string name="about">Информация</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="actionbar_button_up_description">Back</string>
    <string name="afternoon">Afternoon</string>
    <string name="age_label_add_to_calendar">Add to Calendar</string>
    <string name="age_label_dob">Date of birth</string>
    <string name="age_label_hours">Hours</string>
    <string name="age_label_minutes">Minutes</string>
    <string name="age_label_next_birthday">Next birthday</string>
    <string name="age_label_today_date">Today</string>
    <string name="age_label_total_summary">Summary</string>
    <string name="age_label_weeks">Weeks</string>
    <string name="allow">Agree</string>
    <string name="am">AM</string>
    <string name="angle">deg</string>
    <string name="app_name_danfa">Mi Calculator</string>
    <string name="app_notification_info">Calculator is working in the background</string>
    <string name="arccos">arccos</string>
    <string name="arcsin">arcsin</string>
    <string name="arctan">arctan</string>
    <string name="base_rate">Base interest rate</string>
    <string name="bmi_error_text">This BMI doesn\'t look right. Make sure the height and weight you entered are correct.</string>
    <string name="bmi_label_information">Information</string>
    <string name="bmi_label_normal">Normal</string>
    <string name="bmi_label_overweight">Overweight</string>
    <string name="bmi_label_underweight">Underweight</string>
    <string name="bmi_normal">Normal</string>
    <string name="bmi_over_weight">Overweight</string>
    <string name="bmi_underweight">Underweight</string>
    <string name="btn_float_window_alpha">Adjust opacity</string>
    <string name="btn_float_window_back_to_app">Maximize Calculator</string>
    <string name="btn_float_window_close">Close minimized Calculator</string>
    <string name="btn_float_window_resize">Resize minimized calculator</string>
    <string name="cal_convert_to_word_figure">Convert to financial characters</string>
    <string name="cal_copy">Copy</string>
    <string name="cal_edit_mode">Edit mode</string>
    <string name="cal_paste">Paste</string>
    <string name="cal_result_format">= %s</string>
    <string name="cal_text_copied">Text copied</string>
    <string name="cancel">Cancel</string>
    <string name="children_education">Children\'s education</string>
    <string name="chinese_character_cross_check">互查</string>
    <string name="chinese_character_daughter">女</string>
    <string name="chinese_character_elder_brother">兄</string>
    <string name="chinese_character_elder_sister">姐</string>
    <string name="chinese_character_father">父</string>
    <string name="chinese_character_husband">夫</string>
    <string name="chinese_character_mother">母</string>
    <string name="chinese_character_son">子</string>
    <string name="chinese_character_wife">妻</string>
    <string name="chinese_character_younger_brother">弟</string>
    <string name="chinese_character_younger_sister">妹</string>
    <string name="chinese_day_1">初一</string>
    <string name="chinese_day_10">初十</string>
    <string name="chinese_day_11">十一</string>
    <string name="chinese_day_12">十二</string>
    <string name="chinese_day_13">十三</string>
    <string name="chinese_day_14">十四</string>
    <string name="chinese_day_15">十五</string>
    <string name="chinese_day_16">十六</string>
    <string name="chinese_day_17">十七</string>
    <string name="chinese_day_18">十八</string>
    <string name="chinese_day_19">十九</string>
    <string name="chinese_day_2">初二</string>
    <string name="chinese_day_20">二十</string>
    <string name="chinese_day_21">廿一</string>
    <string name="chinese_day_22">廿二</string>
    <string name="chinese_day_23">廿三</string>
    <string name="chinese_day_24">廿四</string>
    <string name="chinese_day_25">廿五</string>
    <string name="chinese_day_26">廿六</string>
    <string name="chinese_day_27">廿七</string>
    <string name="chinese_day_28">廿八</string>
    <string name="chinese_day_29">廿九</string>
    <string name="chinese_day_3">初三</string>
    <string name="chinese_day_30">三十</string>
    <string name="chinese_day_4">初四</string>
    <string name="chinese_day_5">初五</string>
    <string name="chinese_day_6">初六</string>
    <string name="chinese_day_7">初七</string>
    <string name="chinese_day_8">初八</string>
    <string name="chinese_day_9">初九</string>
    <string name="chinese_day_elementary">初</string>
    <string name="chinese_digit_eight">八</string>
    <string name="chinese_digit_five">五</string>
    <string name="chinese_digit_four">四</string>
    <string name="chinese_digit_nine">九</string>
    <string name="chinese_digit_one">一</string>
    <string name="chinese_digit_seven">七</string>
    <string name="chinese_digit_six">六</string>
    <string name="chinese_digit_ten">十</string>
    <string name="chinese_digit_three">三</string>
    <string name="chinese_digit_two">二</string>
    <string name="chinese_digit_zero">〇</string>
    <string name="chinese_leap">闰</string>
    <string name="chinese_month">月</string>
    <string name="chinese_month_april">四</string>
    <string name="chinese_month_august">八</string>
    <string name="chinese_month_december">腊</string>
    <string name="chinese_month_february">二</string>
    <string name="chinese_month_january">正</string>
    <string name="chinese_month_july">七</string>
    <string name="chinese_month_june">六</string>
    <string name="chinese_month_march">三</string>
    <string name="chinese_month_may">五</string>
    <string name="chinese_month_november">冬</string>
    <string name="chinese_month_october">十</string>
    <string name="chinese_month_september">九</string>
    <string name="chinese_symbol_animals_chicken">鸡</string>
    <string name="chinese_symbol_animals_cow">牛</string>
    <string name="chinese_symbol_animals_dog">狗</string>
    <string name="chinese_symbol_animals_dragon">龙</string>
    <string name="chinese_symbol_animals_horse">马</string>
    <string name="chinese_symbol_animals_monkey">猴</string>
    <string name="chinese_symbol_animals_mouse">鼠</string>
    <string name="chinese_symbol_animals_pig">猪</string>
    <string name="chinese_symbol_animals_rabbit">兔</string>
    <string name="chinese_symbol_animals_sheep">羊</string>
    <string name="chinese_symbol_animals_snake">蛇</string>
    <string name="chinese_symbol_animals_tiger">虎</string>
    <string name="choose_currency">Select currency</string>
    <string name="choose_radix">Select numeral system</string>
    <string name="choose_unit">Select unit</string>
    <string name="city">City</string>
    <string name="clear">C</string>
    <string name="clearDesc">clear</string>
    <string name="clear_history">Clear history</string>
    <string name="clearable_edittext_clear_description">Clear</string>
    <string name="close">Close</string>
    <string name="combine_loan">Combined loan</string>
    <string name="commercial_loan">Commercial loan</string>
    <string name="convert_currency">Currency converter</string>
    <string name="convertion_unit">Unit converter</string>
    <string name="convertion_unit_area">Area converter</string>
    <string name="convertion_unit_data">Data converter</string>
    <string name="convertion_unit_length">Length converter</string>
    <string name="convertion_unit_radix">Numeral system</string>
    <string name="convertion_unit_temperature">Temperature converter</string>
    <string name="convertion_unit_time">Time converter</string>
    <string name="convertion_unit_velocity">Speed converter</string>
    <string name="cosDesc">cosine</string>
    <string name="deleteDesc">delete</string>
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="divDesc">divide</string>
    <string name="dot">.</string>
    <string name="dotDesc">point</string>
    <string name="e">e</string>
    <string name="eDesc">Euler\'s number</string>
    <string name="equalDesc">equals</string>
    <string name="leftParenDesc">left parenthesis</string>
    <string name="lgDesc">logarithm</string>
    <string name="lnDesc">natural logarithm</string>
    <string name="minusDesc">minus</string>
    <string name="mulDesc">multiply</string>
    <string name="percentDesc">percent</string>
    <string name="plusDesc">plus</string>
    <string name="powerDesc">power</string>
    <string name="rightParenDesc">right parenthesis</string>
    <string name="secondFunctionDesc">Switch to the second function</string>
    <string name="sinDesc">sine</string>
    <string name="switchDesc">Switch</string>
    <string name="tanDesc">tangent</string>
</resources>